# grid-trading

./: .gitignore  Investment algo requirements.txt  README.md  broker.py  main.py  parameters.csv  pyproject.toml  requirements.txt  strategy.py  test_strategy.py
grid_trading/: .telegram  blocking_wserver.py  broker.py  client3.py  get_quote.py  login_get_kite.py  login_manually.py  login_verify.py  main.py  new_main.py  parameters.csv  redis_client.py  redis_server.py  requirements.txt  search_ws_for_tkns.py  settings.yaml  strategy.py  telegram_example.py  test_strategy.py  threaded_redis_client.py  user_macros.tsv  utils.py  wserver.py
omspy-main/: pyproject.toml
omspy-main/omspy/brokers/: api_helper.py
